package com.rc.fortress.game;

public class WorldController {
	private static final String TAG = WorldController.class.getName();

	public WorldController() {
		init();
	}

	private void init () {}
	public void update (float deltaTime) {}
}
