package com.rc.fortress.game.weapons;

import com.badlogic.gdx.graphics.g2d.SpriteBatch;

public class Mace extends Weapon{
    public Mace(float x, float y) {
        super(WeaponTypes.MACE, x, y);
    }

    @Override
    public void render(SpriteBatch batch) {

    }
}
