package com.rc.fortress.game.weapons;

import com.badlogic.gdx.graphics.g2d.SpriteBatch;

public class Sabre extends Weapon {
    public Sabre(float x, float y) {
        super(WeaponTypes.SABRE, x, y);
    }

    @Override
    public void render(SpriteBatch batch) {

    }
}
