package com.rc.fortress.utils;

public class Constants {
    public static final String ATLAS = "assets.atlas";
}
